<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.12</version>
		<relativePath />
		<!-- lookup parent from repository -->
	</parent>
	<groupId>com.fincity.saas</groupId>
	<artifactId>core</artifactId>
	<version>1.1.0</version>
	<name>core</name>
	<description>Core Server for the no code platform for logic and data</description>
	<properties>
		<java.version>20</java.version>
		<spring-boot-admin.version>3.0.2</spring-boot-admin.version>
		<spring-cloud.version>2021.0.6</spring-cloud.version>
		<saas-commons-version>1.0.0</saas-commons-version>
		<saas-commons-jooq-version>1.0.0</saas-commons-jooq-version>
		<saas-commons-security-version>1.0.0</saas-commons-security-version>
		<saas-commons-mongo-version>1.0.0</saas-commons-mongo-version>
		<saas-commons-mq-version>1.0.0</saas-commons-mq-version>
		<feign-reactor.version>3.3.0</feign-reactor.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.amqp</groupId>
			<artifactId>spring-rabbit</artifactId>
			<version>3.0.4</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-r2dbc</artifactId>
		</dependency>
		<dependency>
			<groupId>io.r2dbc</groupId>
			<artifactId>r2dbc-pool</artifactId>
		</dependency>
		<dependency>
			<groupId>dev.miku</groupId>
			<artifactId>r2dbc-mysql</artifactId>
			<version>0.8.2.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-mysql</artifactId>
		</dependency>
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<version>8.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.jooq</groupId>
			<artifactId>jooq-codegen-maven</artifactId>
			<version>3.17.2</version>
		</dependency>
		<dependency>
			<groupId>org.jooq</groupId>
			<artifactId>jooq</artifactId>
			<version>3.17.2</version>			<!--$NO-MVN-MAN-VER$-->
		</dependency>
		<dependency>
			<groupId>com.fincity.saas</groupId>
			<artifactId>commons-jooq</artifactId>
			<version>${saas-commons-jooq-version}</version>
		</dependency>
		<dependency>
			<groupId>com.fincity.saas</groupId>
			<artifactId>commons-mq</artifactId>
			<version>${saas-commons-mq-version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>de.codecentric</groupId>
			<artifactId>spring-boot-admin-starter-client</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-config</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
		</dependency>
		<dependency>
			<groupId>com.playtika.reactivefeign</groupId>
			<artifactId>feign-reactor-spring-cloud-starter</artifactId>
			<version>${feign-reactor.version}</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>com.playtika.reactivefeign</groupId>
			<artifactId>feign-reactor-spring-configuration</artifactId>
			<version>${feign-reactor.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fincity.saas</groupId>
			<artifactId>commons</artifactId>
			<version>${saas-commons-version}</version>
		</dependency>
		<dependency>
			<groupId>com.fincity.saas</groupId>
			<artifactId>commons-security</artifactId>
			<version>${saas-commons-security-version}</version>
		</dependency>
		<dependency>
			<groupId>com.fincity.saas</groupId>
			<artifactId>commons-mongo</artifactId>
			<version>${saas-commons-mongo-version}</version>
		</dependency>
		<dependency>
			<groupId>org.freemarker</groupId>
			<artifactId>freemarker-gae</artifactId>
			<version>2.3.32</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>jakarta.mail</artifactId>
			<version>2.0.1</version>
		</dependency>
		<dependency>
			<groupId>com.sun.activation</groupId>
			<artifactId>javax.activation</artifactId>
			<version>1.2.0</version>
		</dependency>
		<dependency>
			<groupId>com.sun.activation</groupId>
			<artifactId>jakarta.activation</artifactId>
			<version>2.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.projectreactor</groupId>
			<artifactId>reactor-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>de.codecentric</groupId>
				<artifactId>spring-boot-admin-dependencies</artifactId>
				<version>${spring-boot-admin.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>jib-maven-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<from>
						<image>openjdk:alpine</image>
					</from>
					<to>
						<image>ghcr.io/fincity-india/core</image>
						<tags>
							<tag>${env.ENVIRONMENT}</tag>
							<tag>${project.version}</tag>
						</tags>
					</to>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>jooq</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jooq</groupId>
						<artifactId>jooq-codegen-maven</artifactId>
						<version>3.17.2</version>
						<executions>
							<execution>
								<goals>
									<goal>generate</goal>
								</goals>
							</execution>
						</executions>
						<dependencies>
							<dependency>
								<groupId>mysql</groupId>
								<artifactId>mysql-connector-java</artifactId>
								<version>8.0.29</version>
							</dependency>
							<dependency>
								<groupId>javax.xml.bind</groupId>
								<artifactId>jaxb-api</artifactId>
								<version>2.3.1</version>
							</dependency>
							<dependency>
								<groupId>org.glassfish.jaxb</groupId>
								<artifactId>jaxb-runtime</artifactId>
								<version>4.0.0</version>
							</dependency>
						</dependencies>
						<configuration>
							<jdbc>
								<driver>com.mysql.cj.jdbc.Driver</driver>
								<url>jdbc:mysql://localhost:3306/core</url>
								<user>root</user>
								<password>Kiran@123</password>
							</jdbc>
							<generator>
								<database>
									<includes>core_.*</includes>
									<inputSchema>core</inputSchema>
								</database>
								<generate>
									<deprecated>false</deprecated>
									<relations>true</relations>
									<records>true</records>
									<immutablePojos>false</immutablePojos>
									<fluentSetters>true</fluentSetters>
								</generate>
								<target>
									<packageName>com.fincity.saas.core.jooq</packageName>
									<directory>src/main/java</directory>
								</target>
							</generator>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>